[tool.poetry]
name = "peanuttrade-test-task"
version = "0.1.0"
description = ""
authors = ["vlad <vladislavcarik2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
pandas = "^2.2.1"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
pre-commit = "^3.7.0"
loguru = "^0.7.2"
prometheus-client = "^0.20.0"
aiohttp = "^3.9.3"
aiogram = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
